--- a/astrosetu/playwright-report/data/e49a220940fdde5a2326019ce0ecf20bae0ff4bb.md
+++ b/astrosetu/playwright-report/data/e49a220940fdde5a2326019ce0ecf20bae0ff4bb.md
@@ -34,15 +34,15 @@
           - heading "Generating Your Life Summary..." [level=2] [ref=e35]
           - paragraph [ref=e36]: Our AI is analyzing your birth chart and generating personalized insights
           - paragraph [ref=e38]:
-            - generic [ref=e39]: "⏱️ Elapsed: 3s • Est. remaining: 62s"
+            - generic [ref=e39]: "⏱️ Elapsed: 10s • Est. remaining: 55s"
           - generic [ref=e41]:
             - generic [ref=e49]:
               - paragraph [ref=e50]: ✨ Our AI is crafting your personalized insights...
-              - paragraph [ref=e51]: "Typically completes in 60-70 seconds • Elapsed: 3s"
+              - paragraph [ref=e51]: "Typically completes in 60-70 seconds • Elapsed: 10s"
             - generic [ref=e52]:
               - paragraph [ref=e53]: Generation Progress
               - generic [ref=e54]:
-                - generic [ref=e55]: ○
+                - generic [ref=e55]: ⏳
                 - generic [ref=e56]: Birth Chart Calculation
               - generic [ref=e57]:
                 - generic [ref=e58]: ○
@@ -73,7 +73,7 @@
                 - /url: /ai-astrology/input
             - paragraph [ref=e87]:
               - strong [ref=e88]: "Report ID:"
-              - text: RPT-1768225238558-MOCK-9cmpof
+              - text: RPT-1768225855866-MOCK-iak58
     - contentinfo [ref=e89]:
       - generic [ref=e91]:
         - generic [ref=e92]:
